# TILO-PRC

./: .gitignore  AGENT.md  Index  README.md  flat_zone_split_demo.py  genSimMatrix.py  iris_tilo_one_loop_demo.py  iris_tilo_split_progress.py  pinchRatioClustering.py  prc.py  pyproject.toml  readme.rst
datasets/: README.md
datasets/graphs/: d1.txt
datasets/iris/: iris_all.txt
datasets/vote/: vote_all.txt
doc/: Python全量迁移说明.md  index.md  主线模块拆分说明.md  代码组织.md  启动逻辑.md  图网络聚类实验报告_50_100_200_2026-05-19.md  实验设计原则.md  审查代码.md  强前置条件约束.md  架构重构与接口分层说明_2026-05-17.md  论文核心与项目思路.md
experiments/: compare_iris_prc_baselines.py  reproduce_paper_fig_ari.py
experiments/demos/: flat_zone_split_demo.py  iris_tilo_one_loop_demo.py  iris_tilo_split_progress.py
experiments/graph_clustering/: compare_iris_prc_baselines.py  reproduce_paper_fig_ari.py  run_propagation_tree_graph_clustering.py  run_rumor_nonrumor_prc_study.py  visualize_rumor_nonrumor_trees.py
experiments/output/: iris_compare_metrics.csv  iris_compare_metrics.json  paper_fig_ari_diagnostics.json
outputs/demos/flat_zone_split/: flat_zone_split_demo.json
outputs/demos/iris_tilo_demo/: iris_tilo_prc_one_loop_summary.json
outputs/experiments/: iris_compare_metrics.csv  iris_compare_metrics.json  iris_sim_out.txt  paper_fig_ari_diagnostics.json
outputs/graph_clustering/prc_study_rumor_nonrumor/all_trees/: checkpoint.json  errors.tsv  per_tree_prc_metrics.tsv  roots_catalog.tsv
outputs/graph_clustering/prc_study_rumor_nonrumor/all_trees/graphs/: 3476496058745719.metis
outputs/graph_clustering/prc_study_rumor_nonrumor/resume_test/: checkpoint.json  per_tree_prc_metrics.tsv  roots_catalog.tsv  study_summary.json
outputs/graph_clustering/prc_study_rumor_nonrumor/run_20260518_195706/graphs/: 3458738764029954.metis  3460120078103292.metis  3460120078103292.metis_prc_part_2_3460120078103292_study  3462269600134003.metis  3462269600134003.metis_prc_part_2_3462269600134003_study  3465261540071546.metis  3465261540071546.metis_prc_part_2_3465261540071546_study
outputs/graph_clustering/prc_study_rumor_nonrumor/run_20260518_201718/: per_tree_prc_metrics.tsv  study_summary.json
outputs/graph_clustering/prc_study_rumor_nonrumor/run_20260518_201718/graphs/: 3453646882841201.metis_prc_part_2_3453646882841201_study  3458052025942521.metis  3773641642622642.metis  3777481372829776.metis  3777481372829776.metis_prc_part_2_3777481372829776_study
outputs/graph_clustering/prc_study_rumor_nonrumor/run_20260518_202800/: per_tree_prc_metrics.tsv  study_summary.json
outputs/graph_clustering/propagation_tree_graph/: 3453646882841201__edges.tsv  3453646882841201__experiment_summary.json  3453646882841201__nodes.tsv  3453646882841201__weighted_tree.metis_prc_part_2_3453646882841201_rtree
outputs/graph_clustering/rumor_vs_non_rumor_viz/: tree_metrics.tsv  visualization_summary.json
outputs/iris_tilo_split_progress/: split_progress_summary.json
prc_v0.1.05 (1)/_mirror_artifacts/: CMakeLists.txt  doc.CMakeLists.txt  doc.Doxyfile.in  tests.test_iris.sh
prc_v0.1.05 (1)/_mirror_artifacts/prc/: CMakeLists.txt  denseEigenStorage.h  gausssim.h  genSimMatrix.cc  knnsim.h  pinch.h  prcCountsStruct.h  prcForwardDeclarations.h  prcReturnStruct.h  runConfigs.h  sparseCSCNumpyStorage.h  sparseEigenStorage.h
prc_v0.1.05 (1)/_mirror_artifacts/prc/internal/: CMakeLists.txt  internal_FlatStruct.h  internal_gausssim.h  internal_knnsim.h  internal_knnsimSparse.h  internal_prcCountsStruct.h  internal_prcPolicies.h  internal_prcReturnStruct.h  prc_buildinfo.h  prc_revision.h  prc_revision.h.in  purity.h
prc_v0.1.05 (1)/_mirror_artifacts/pythonExt/: cc_prcIVecAt.cc  cc_prcIVecSet.cc  cc_prcPinch.cc  cc_prcSPPinch.cc  cc_prcSPRefineTILO.cc  cc_prcTILO.cc  cc_prcTestSparseCSC.cc  cc_sp_calcBoundaries.cc  prc_impl.cc  prc_impl_auto.py  readme.html  readme.rst
prc_v0.1.05 (1)/prc_v0.1.05_d2013_04_30/: readme.html  readme.rst
prc_v0.1.05 (1)/prc_v0.1.05_d2013_04_30/cmake/: c_flags_overides.cmake  cxx_flags_overides.cmake
prc_v0.1.05 (1)/prc_v0.1.05_d2013_04_30/demos/: CMakeLists.txt
prc_v0.1.05 (1)/prc_v0.1.05_d2013_04_30/prc/: BoundaryObject.h  FlatStruct.h  OrderObject.h  Ordering.h  SBase.h  VirtualOrderObject.h  denseNumpyStorage.h  gausssimSparse.h  knnsimSparse.h  multilevelPinch.h  pinchRatioClustering.cc  prcMetricValues.h  prcPolicies.h  prc_version.h  prcutils.h  pythonHelpers.h
prc_v0.1.05 (1)/prc_v0.1.05_d2013_04_30/prc/internal/: internal_BoundaryObject.h  internal_OrderObject.h  internal_VirtualOrderObject.h  internal_gausssimSparse.h  internal_multilevelPinch.h  internal_pinch.h  internal_prcMetricValues.h  internal_prcutils.h  internal_runConfigs.h  prc_buildinfo.h  prc_buildinfo.h.in  prc_revision.h
prc_v0.1.05 (1)/prc_v0.1.05_d2013_04_30/pythonExt/: cc_calcBoundaries.cc  cc_findSplitLocations.cc  cc_prcDVecAt.cc  cc_prcDVecSet.cc  cc_prcRefineTILO.cc  cc_prcSPTILO.cc  cc_prcTestDenseNumpy.cc  prc.py  prc_gen.py  prc_gen_custom.py  prc_impl.py  setup.cfg  setup.cfg.win32  setup.py
prc_v0.1.05 (1)/prc_v0.1.05_d2013_04_30/pythonExt/examples/: prc_example.py
prc_v0.1.05 (1)/prc_v0.1.05_d2013_04_30/tests/: test_d1.sh
pyprc/: README.md  __init__.py  algorithm.py  cli.py  cli_pinch_ratio_clustering.py  core.py  io.py  matrix.py  pipeline.py  rng.py  similarity.py
src/: prc.py
src/pyprc/: __init__.py  cli_gen_sim_matrix.py  compat.py  enums.py  order.py  structs.py
test/: run_legacy_prc_repro.py
test/legacy_prc_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
test/legacy_prc_build/demos/: Makefile  cmake_install.cmake
test/legacy_prc_build/doc/: Doxyfile  Makefile  cmake_install.cmake
test/legacy_prc_build/prc/: Makefile  cmake_install.cmake
test/legacy_prc_build/prc/internal/: Makefile  cmake_install.cmake
test/legacy_prc_outputs/: current_pyprc_paper_fig_diagnostics.json  legacy_repro_summary.json  legacy_repro_summary.md
tests/: test_pipeline_interfaces.py  test_pyprc_smoke.py  test_reproduce_paper_protocol.py  test_similarity_alignment.py
(+18 files in other folders)
